k8s/Student-api/Namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: development
  labels:
    env: development
    team: manifest
